tests/valid/and-condition.lua
local zch = "a"
if math.random(2)>0 then zch = nil end
local wch = nil

if zch and wch then
        print(zch)
end
