tests/failing/numeric-truthiness.lua
if random(2) then
  send(pl, "oh")
end